--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,10 @@ git:
   depth: 1
 
 install:
-  - pip install --user numpy
-  - pip install 
+  - pip install numpy
 
 script:
   - for test in tests/test_*.py; do python ${test}; done
-
 
 notifications:
   email: false
