--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ git:
   depth: 1
 
 install:
-  - pip install numpy
+  - pip install numpy matplotlib
 
 script:
   - for test in tests/test_*.py; do python ${test}; done
