--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,10 @@ install:
   - |
     if [[ -z "$(ls -A ${ROOT_DIR})" ]]; then
       URL="https://root.cern.ch/download/root_v6.10.02.source.tar.gz"
+      mkdir -p ${ROOT_DIR}_src
+      mkdir -p ${ROOT_DIR}_build
       { travis_retry wget --quiet -O - ${URL} | tar --strip-components=1 -xz -C ${ROOT_DIR}_src; } || exit 1
-      (mkdir -p ${ROOT_DIR}_build; cd ${ROOT_DIR}_build && cmake ${ROOT_DIR}_src -DCMAKE_INSTALL_PREFIX=${ROOT_DIR} && make install)
+      (cd ${ROOT_DIR}_build && cmake ${ROOT_DIR}_src -DCMAKE_INSTALL_PREFIX=${ROOT_DIR} && make install)
     fi
   - export PYTHONPATH=${ROOT_DIR/lib}:${PYTHONPATH}
 
