--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ git:
 install:
   - pip install -r requirements.txt
 
-script: pytest
+script:
+  - pytest
+  - python tests/test_doc.py
 
 notifications:
   email: false
