--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 
-language: python
+language: cpp
 
 cache:
   pip: true
@@ -25,8 +25,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest
-  - python tests/test_doc.py
+  - for test in tests/*.py; do python ${test}; done
 
 notifications:
   email: false
