--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
 
 script:
   - dpkg -L libroot-bindings-python5.34
-  - export PYTHONPATH=/usr/lib/python2.7/dist-packages:${PYTHONPATH}
+  - export PYTHONPATH=/usr/share/python-support/root:${PYTHONPATH}
   - python2.7 -c "import ROOT"
   - for test in tests/*.py; do python ${test}; done
 
