--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
 
 python:
   - 2.7
+  - 3.7
 
 branches:
     only:
@@ -24,11 +25,12 @@ git:
   depth: 1
 
 install:
-  - pip install -r requirements.txt
+  - pip install pytest
+  - python setup.py install
 
 script:
-  - export PYTHONPATH=/usr/lib/x86_64-linux-gnu/root5.34:${PYTHONPATH}
-  - for test in tests/*.py; do python ${test}; done
+  #- export PYTHONPATH=/usr/lib/x86_64-linux-gnu/root5.34:${PYTHONPATH}
+  - pytest
 
 notifications:
   email: false
