--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ language: python
 cache:
   pip: true
 
-addons:
-  apt:
-    packages:
-      - root-system
-      - root-plugin-math-minuit2
-      - python2.7-pyroot
+# addons:
+#   apt:
+#     packages:
+#       - root-system
+#       - root-plugin-math-minuit2
+#       - python2.7-pyroot
 
 python:
   - 2.7
@@ -25,7 +25,6 @@ git:
   depth: 1
 
 install:
-  - pip install pytest
   - python setup.py install
 
 script:
